--- a/tutorial1.ipynb
+++ b/tutorial1.ipynb
@@ -85,12 +85,14 @@
     "\n",
     "Binary operators are operators that include any form of combination, such as `A + B` or `A * B`. https://en.wikipedia.org/wiki/Binary_operation\n",
     "\n",
-    "Unary operators are operators that perform a transformation, as as `sin(x)` or `abs(x)` or `-(x)`."
+    "Unary operators are operators that perform a transformation, as as `sin(x)` or `abs(x)` or `-(x)`.\n",
+    "\n",
+    "Note, if operators are not included then they will not be selected for use in the regressor. For example, if you leave out `cos`, the regressor will not be able to try applying a `cos` function in the equations it attempts."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "77508e3a-9189-47c6-bb37-6da03cddd03e",
    "metadata": {},
    "outputs": [
@@ -99,8 +101,84 @@
      "output_type": "stream",
      "text": [
       "/opt/homebrew/anaconda3/envs/symbol/lib/python3.8/site-packages/pysr/sr.py:1296: UserWarning: Note: it looks like you are running in Jupyter. The progress bar will be turned off.\n",
+      "  warnings.warn(\n",
+      "/opt/homebrew/anaconda3/envs/symbol/lib/python3.8/site-packages/pysr/julia_helpers.py:197: UserWarning: Your system's Python library is static (e.g., conda), so precompilation will be turned off. For a dynamic library, try `pyenv`.\n",
       "  warnings.warn(\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>PySRRegressor.equations_ = [\n",
+       "\t   pick      score                                   equation          loss  \\\n",
+       "\t0         0.000000                                   2.354772  3.360272e+01   \n",
+       "\t1         0.850855                                  (x0 * x0)  6.128181e+00   \n",
+       "\t2         0.349618                   ((x0 * x0) + -1.7557565)  3.045492e+00   \n",
+       "\t3         0.002620     (((x0 * x0) + -1.7020328) * 0.9776975)  3.029573e+00   \n",
+       "\t4         0.996444       ((cos(x3) + (x0 * x0)) + -1.8519837)  1.118488e+00   \n",
+       "\t5         0.161678   ((-3.119208 + (x0 * x0)) + exp(cos(x3)))  9.515150e-01   \n",
+       "\t6  &gt;&gt;&gt;&gt;  29.066350  ((x0 * x0) + (-2.0 + (cos(x3) * 2.5382)))  2.264958e-13   \n",
+       "\t\n",
+       "\t   complexity  \n",
+       "\t0           1  \n",
+       "\t1           3  \n",
+       "\t2           5  \n",
+       "\t3           7  \n",
+       "\t4           8  \n",
+       "\t5           9  \n",
+       "\t6          10  \n",
+       "]</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">PySRRegressor</label><div class=\"sk-toggleable__content\"><pre>PySRRegressor.equations_ = [\n",
+       "\t   pick      score                                   equation          loss  \\\n",
+       "\t0         0.000000                                   2.354772  3.360272e+01   \n",
+       "\t1         0.850855                                  (x0 * x0)  6.128181e+00   \n",
+       "\t2         0.349618                   ((x0 * x0) + -1.7557565)  3.045492e+00   \n",
+       "\t3         0.002620     (((x0 * x0) + -1.7020328) * 0.9776975)  3.029573e+00   \n",
+       "\t4         0.996444       ((cos(x3) + (x0 * x0)) + -1.8519837)  1.118488e+00   \n",
+       "\t5         0.161678   ((-3.119208 + (x0 * x0)) + exp(cos(x3)))  9.515150e-01   \n",
+       "\t6  &gt;&gt;&gt;&gt;  29.066350  ((x0 * x0) + (-2.0 + (cos(x3) * 2.5382)))  2.264958e-13   \n",
+       "\t\n",
+       "\t   complexity  \n",
+       "\t0           1  \n",
+       "\t1           3  \n",
+       "\t2           5  \n",
+       "\t3           7  \n",
+       "\t4           8  \n",
+       "\t5           9  \n",
+       "\t6          10  \n",
+       "]</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "PySRRegressor.equations_ = [\n",
+       "\t   pick      score                                   equation          loss  \\\n",
+       "\t0         0.000000                                   2.354772  3.360272e+01   \n",
+       "\t1         0.850855                                  (x0 * x0)  6.128181e+00   \n",
+       "\t2         0.349618                   ((x0 * x0) + -1.7557565)  3.045492e+00   \n",
+       "\t3         0.002620     (((x0 * x0) + -1.7020328) * 0.9776975)  3.029573e+00   \n",
+       "\t4         0.996444       ((cos(x3) + (x0 * x0)) + -1.8519837)  1.118488e+00   \n",
+       "\t5         0.161678   ((-3.119208 + (x0 * x0)) + exp(cos(x3)))  9.515150e-01   \n",
+       "\t6  >>>>  29.066350  ((x0 * x0) + (-2.0 + (cos(x3) * 2.5382)))  2.264958e-13   \n",
+       "\t\n",
+       "\t   complexity  \n",
+       "\t0           1  \n",
+       "\t1           3  \n",
+       "\t2           5  \n",
+       "\t3           7  \n",
+       "\t4           8  \n",
+       "\t5           9  \n",
+       "\t6          10  \n",
+       "]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -116,9 +194,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "741106c5-d279-4567-9c92-321c9de3a78e",
+   "metadata": {},
+   "source": [
+    "Here we see that the regressor correctly picks the training equation: $y = -2 + x_{0}^2 + \\cos 2.5382 x_{3}$\n",
+    "\n",
+    "We can also print out the functional representation using `sympy` and choosing the equation index."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0dcae8ec-d76d-4792-8bcf-4824f6db3c7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle x_{0}^{2} + 2.5382 \\cos{\\left(x_{3} \\right)} - 2.0$"
+      ],
+      "text/plain": [
+       "x0**2 + 2.5382*cos(x3) - 2.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.sympy(6)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee52f7c8-4ede-4fc7-85c5-146ecaa9a05e",
+   "id": "74257b13-5469-4ad5-b29b-f9c097e14710",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27b1f4e4-acad-4062-892e-c322a5f382e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37ca2953-e46a-4116-917a-d189523b24b3",
    "metadata": {},
    "outputs": [],
    "source": []
